--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
 <!-- B. Habitudes & accès -->
 <section>
 <h2>B. Habitudes &amp; accès</h2>
-<label class="required">Distance maximale pour consulter</label>
-<select name="Distance" required>
+
+<label class="required">Temps de trajet maximal pour vous rendre chez le médecin</label>
+<select name="TempsTrajet" required>
 <option value="">-- Choisir --</option>
-<option>≤ 1 km (à pied)</option><option>1‑3 km</option><option>&gt; 3 km (voiture/taxi)</option>
+<option>≤ 5&nbsp;min</option><option>5‑15&nbsp;min</option><option>15‑30&nbsp;min</option><option>&gt; 30&nbsp;min</option>
 </select>
 
 <label class="required">Créneaux horaires préférés <small>(plusieurs choix)</small></label>
